Added button fade transition on hover

--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@ body {
 
 @media (hover: hover) {
     .link:hover {
+        transition: 0.3s;
         background-color: var(--accentColor);
         color: var(--bgColor);
     }
